--- a/dev/templates/home.html
+++ b/dev/templates/home.html
@@ -176,82 +176,117 @@
                     <div class="title-section row">
                         <h2 class="col-sm-12">Профессии</h2>
                     </div>
-                    <div class="row">
-                        <div class="col-sm-12 wrapper-tabs">
-                            <div id="first-tab-group" class="tabgroup">
-                                <div id="tab1" class="wrapper-tabs-item">
+                </div>
+                <div class="wrapper-tabs">
+                    <div id="first-tab-group" class="tabgroup">
+                        <div id="tab1" class="wrapper-tabs-item" style="background-image: url(images/home-bg1.jpg);">
+                            <div class="container">
+                                <div class="row">
+
                                     <div class="col-md-8">
-                                        <div class="img-wrap" style="background-image: url(images/tabs-img.png);">
+                                        <div class="img-wrap">
                                             <p><b>Big Data Scientist</b> - профессия будущего.</p>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
                                         <h2>Специалист по машинному
                                             обучению</h2>
-                                        <p class="style-text-tab">Профессия data scientist отмечается как одна из самых перспективных в мире. Число
+                                        <p class="style-text-tab">Профессия data scientist отмечается как одна из самых
+                                            перспективных в мире. Число
                                             вакансий в этом направлении растёт по экспоненте.
                                         </p>
-                                        <p class="style-text-tab">По расчётам McKinsey Global Institute к 2018 годупонадобится дополнительно 190
+                                        <p class="style-text-tab">По расчётам McKinsey Global Institute к 2018
+                                            годупонадобится дополнительно 190
                                             тысяч специалистов по данным.</p>
-                                        <p class="style-text-tab"><a class="el-btn pur-style" href="#">Подробнее о профессии</a></p>
+                                        <p class="style-text-tab"><a class="el-btn pur-style" href="#">Подробнее о
+                                            профессии</a></p>
                                     </div>
                                 </div>
-                                <div id="tab2" class="wrapper-tabs-item">
+                            </div>
+                        </div>
+                        <div id="tab2" class="wrapper-tabs-item" style="background-image: url(images/tabs-img.png);">
+                            <div class="container">
+                                <div class="row">
                                     <div class="col-md-8">
-                                        <div class="img-wrap" style="background-image: url(images/tabs-img.png);">
+                                        <div class="img-wrap">
                                             <p><b>Big Data Scientist</b> - профессия будущего.</p>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
                                         <h2>Big Data Analyst</h2>
-                                        <p class="style-text-tab">Профессия data scientist отмечается как одна из самых перспективных в мире. Число
+                                        <p class="style-text-tab">Профессия data scientist отмечается как одна из самых
+                                            перспективных в мире. Число
                                             вакансий в этом направлении растёт по экспоненте.
                                         </p>
-                                        <p class="style-text-tab">По расчётам McKinsey Global Institute к 2018 годупонадобится дополнительно 190
+                                        <p class="style-text-tab">По расчётам McKinsey Global Institute к 2018
+                                            годупонадобится дополнительно 190
                                             тысяч специалистов по данным.</p>
-                                        <p class="style-text-tab"><a class="el-btn pur-style" href="#">Подробнее о профессии</a></p>
+                                        <p class="style-text-tab"><a class="el-btn pur-style" href="#">Подробнее о
+                                            профессии</a></p>
                                     </div>
                                 </div>
-                                <div id="tab3" class="wrapper-tabs-item">
+                            </div>
+
+                        </div>
+                        <div id="tab3" class="wrapper-tabs-item" style="background-image: url(images/tabs-img.png);">
+                            <div class="container">
+                                <div class="row">
                                     <div class="col-md-8">
-                                        <div class="img-wrap" style="background-image: url(images/tabs-img.png);">
+                                        <div class="img-wrap">
                                             <p><b>Big Data Scientist</b> - профессия будущего.</p>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
                                         <h2>Data Scientist в фармакологии</h2>
-                                        <p class="style-text-tab">Профессия data scientist отмечается как одна из самых перспективных в мире. Число
+                                        <p class="style-text-tab">Профессия data scientist отмечается как одна из самых
+                                            перспективных в мире. Число
                                             вакансий в этом направлении растёт по экспоненте.
                                         </p>
-                                        <p class="style-text-tab">По расчётам McKinsey Global Institute к 2018 годупонадобится дополнительно 190
+                                        <p class="style-text-tab">По расчётам McKinsey Global Institute к 2018
+                                            годупонадобится дополнительно 190
                                             тысяч специалистов по данным.</p>
-                                        <p class="style-text-tab"><a class="el-btn pur-style" href="#">Подробнее о профессии</a></p>
+                                        <p class="style-text-tab"><a class="el-btn pur-style" href="#">Подробнее о
+                                            профессии</a></p>
                                     </div>
                                 </div>
-                                <div id="tab4" class="wrapper-tabs-item">
+                            </div>
+
+                        </div>
+                        <div id="tab4" class="wrapper-tabs-item" style="background-image: url(images/tabs-img.png);">
+                            <div class="container">
+                                <div class="row">
                                     <div class="col-md-8">
-                                        <div class="img-wrap" style="background-image: url(images/tabs-img.png);">
+                                        <div class="img-wrap">
                                             <p><b>Big Data Scientist</b> - профессия будущего.</p>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
                                         <h2>Busines Intelligence Analyst</h2>
-                                        <p class="style-text-tab">Профессия data scientist отмечается как одна из самых перспективных в мире. Число
+                                        <p class="style-text-tab">Профессия data scientist отмечается как одна из самых
+                                            перспективных в мире. Число
                                             вакансий в этом направлении растёт по экспоненте.
                                         </p>
-                                        <p class="style-text-tab">По расчётам McKinsey Global Institute к 2018 годупонадобится дополнительно 190
+                                        <p class="style-text-tab">По расчётам McKinsey Global Institute к 2018
+                                            годупонадобится дополнительно 190
                                             тысяч специалистов по данным.</p>
-                                        <p class="style-text-tab"><a class="el-btn pur-style" href="#">Подробнее о профессии</a></p>
+                                        <p class="style-text-tab"><a class="el-btn pur-style" href="#">Подробнее о
+                                            профессии</a></p>
                                     </div>
                                 </div>
                             </div>
-                            <ul class="tabs clearfix" data-tabgroup="first-tab-group">
-                                <li><a href="#tab1" class="active">Big Data Scientist <i class="icon-angle-right"></i></a></li>
-                                <li><a href="#tab2">Big Data Analyst  <i class="icon-angle-right"></i></a></li>
-                                <li><a href="#tab3">Data Scientist в фармакологии <i class="icon-angle-right"></i></a></li>
-                                <li><a href="#tab4">Busines Intelligence Analyst <i class="icon-angle-right"></i></a></li>
-                            </ul>
+
                         </div>
+                    </div>
+                    <div class="container">
+                        <ul class="tabs clearfix" data-tabgroup="first-tab-group">
+                            <li><a href="#tab1" class="active">Big Data Scientist <i
+                                    class="icon-angle-right"></i></a></li>
+                            <li><a href="#tab2">Big Data Analyst <i class="icon-angle-right"></i></a></li>
+                            <li><a href="#tab3">Data Scientist в фармакологии <i class="icon-angle-right"></i></a>
+                            </li>
+                            <li><a href="#tab4">Busines Intelligence Analyst <i class="icon-angle-right"></i></a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </section>
