--- a/dev/sass/components/elements.sass
+++ b/dev/sass/components/elements.sass
@@ -625,6 +625,8 @@
         color: #4a90e2
       &.gplus:hover
         color: #fb5570
+      &.vk:hover
+        color: #36538e
 
 // social share block wrap
 //-----------------------------------------------------------------------------------
