--- a/dev/sass/pages/profession.sass
+++ b/dev/sass/pages/profession.sass
@@ -26,6 +26,41 @@
     color: black
     font: 400 18px/36px $open
 
+.page-content .partner-section,
+.page-content .lecturer-wrap
+  .owl-controls
+    position: absolute
+    top: 50%
+    right: -90px
+    left: -90px
+    margin-top: -28px
+    height: 0
+
+  .owl-nav
+    @extend %clear-fix
+    height: 0
+
+  .owl-prev, .owl-next
+    width: 56px
+    height: 56px
+    border: 1px solid #4a72f5
+    border-radius: 100%
+    color: #4a72f5
+    text-align: center
+    font-size: 20px
+    line-height: 54px
+    opacity: 0.3
+    cursor: pointer
+    transition: all .12s ease
+    &:hover
+      opacity: 1
+
+  .owl-prev
+    float: left
+  .owl-next
+    float: right
+    .icon-arrow-l:before
+      transform: rotate(180deg)
 
 .page-content
   .branches-section
@@ -49,41 +84,6 @@
       margin-left: 75px
       color: black
       font: 300 16px/50px $open
-
-  .partner-section
-    .owl-controls
-      position: absolute
-      top: 50%
-      right: 0
-      left: 0
-      margin-top: -28px
-      height: 0
-
-    .owl-nav
-      @extend %clear-fix
-      height: 0
-
-    .owl-prev, .owl-next
-      width: 56px
-      height: 56px
-      border: 1px solid #4a72f5
-      border-radius: 100%
-      color: #4a72f5
-      text-align: center
-      font-size: 20px
-      line-height: 54px
-      opacity: 0.3
-      cursor: pointer
-      transition: all .12s ease
-      &:hover
-        opacity: 1
-
-    .owl-prev
-      float: left
-    .owl-next
-      float: right
-      .icon-arrow-l:before
-        transform: rotate(180deg)
 
   .partner.css-slider
     box-sizing: border-box
